--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "git-commit-msg-linter": "^5.0.4"
+    "@types/node": "^20.9.3",
+    "git-commit-msg-linter": "^5.0.4",
+    "typescript": "^5.3.2"
   }
 }
