--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.9.3",
+    "eslint-config-standard-with-typescript": "^40.0.0",
     "git-commit-msg-linter": "^5.0.4",
     "typescript": "^5.3.2"
   }
