--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/node": "^20.9.3",
     "eslint-config-standard-with-typescript": "^40.0.0",
     "git-commit-msg-linter": "^5.0.4",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.1.0",
     "typescript": "^5.3.2"
   }
 }
