--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.1.0",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   }
 }
