--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,8 @@
   },
   "rules": {
     "@typescript-eslint/strict-boolean-expressions": "off",
-    "@typescript-eslint/prefer-nullish-coalescing": "off"
+    "@typescript-eslint/prefer-nullish-coalescing": "off",
+    "@typescript-eslint/no-var-requires": 0
+
   }
 }
