--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.9",
     "@types/node": "^20.9.3",
+    "@types/validator": "^13.11.7",
     "eslint-config-standard-with-typescript": "^40.0.0",
     "git-commit-msg-linter": "^5.0.4",
     "husky": "^8.0.3",
@@ -25,5 +26,8 @@
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
+  },
+  "dependencies": {
+    "validator": "^13.11.0"
   }
 }
