--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.2.0",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.9",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^20.9.3",
     "@types/validator": "^13.11.7",
     "eslint-config-standard-with-typescript": "^40.0.0",
@@ -30,6 +32,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "mongodb": "^6.3.0",
     "validator": "^13.11.0"
   }
 }
