--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/jest": "^29.5.9",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20.9.3",
+    "@types/supertest": "^2.0.16",
     "@types/validator": "^13.11.7",
     "eslint-config-standard-with-typescript": "^40.0.0",
     "git-commit-msg-linter": "^5.0.4",
@@ -29,6 +30,7 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.1.0",
     "sucrase": "^3.34.0",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
